# ArgusDB

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  Cargo.toml  GEMINI.md  ROADMAP.md
.github/: dependabot.yml
.github/workflows/: bencher.yml  ci.yml
benches/: db.rs  insertion.rs  logging.rs
specs/: interface.md  lazy-deserialization.md  logging.md  query-algebra.md  query-language.md  schema-inference.md  storage.md  vectorized-execution.md
src/: bench_utils.rs  db.rs  expression.rs  jstable.rs  lib.rs  log.rs  main.rs  parser.rs  query.rs  schema.rs  storage.rs
tests/: corruption_test.rs  expression_tests.rs  log_tests.rs  parser_tests.rs  persistence_test.rs  query_execution.rs  tombstone_test.rs  utils_test.rs
