[package]
name = "argusdb"
version = "0.1.0"
edition = "2024"

[dependencies]
pgwire = "0.37.0"
sqlparser = "0.60.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonb = "0.5.5"
jsonpath-rust = "0.7"

[dev-dependencies]
tempfile = "3.10.1"
