[package]
name = "argusdb"
version = "0.1.0"
edition = "2024"

[dependencies]
pgwire = "0.37.0"
sqlparser = "0.60.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
jsonb = "0.5.5"
jsonpath-rust = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
clap = { version = "4.5.54", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.10.1"

[[bench]]
name = "db"
harness = false

[[bin]]
name = "argusdb"
path = "src/bin/argusdb.rs"
