[package]
name = "argusdb"
version = "0.1.0"
edition = "2024"

[dependencies]
pgwire = "0.37.0"
sqlparser = "0.60.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20.0", features = ["v7", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
jsonb_schema = { git = "https://github.com/dataunitylab/jsonb", branch = "jsonb-schema" }
mongodb = { version = "3.5.0", optional = true }
tokio-postgres = "0.7.10"
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
clap = { version = "4.5.57", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
xorf = { version = "0.12.0", features = ["binary-fuse", "serde"] }
rand = "0.9.2"
tempfile = "3.10.1"
tikv-jemallocator = "0.6.1"
bumpalo = "3.16"
pprof = { version = "0.15.0", optional = true, "features" = ["protobuf-codec"] }
protobuf = { version = "3.7.2", optional = true }

[features]
mongo = ["dep:mongodb"]
profiling = ["dep:pprof", "dep:protobuf"]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "db"
harness = false

[[bench]]
name = "logging"
harness = false

[[bin]]
name = "argusdb"
path = "src/bin/argusdb.rs"
